tests/rand/06-fail-for-empty-enum.rs
use enum_derived::Rand;

#[derive(Rand)]
pub enum VariantFree {}

fn main() {}
